--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@types/cors": "^2.8.17",
+    "@types/eslint-config-prettier": "^6.11.3",
     "@types/express": "^4.17.21",
     "eslint": "^9.9.0",
     "eslint-config-prettier": "^9.1.0",
