--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.5.1"
+    "mongoose": "^8.5.1",
+    "nodemailer": "^6.9.14",
+    "nodemailer-express-handlebars": "^6.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -31,6 +33,8 @@
     "@types/eslint-config-prettier": "^6.11.3",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/nodemailer": "^6.4.15",
+    "@types/nodemailer-express-handlebars": "^4.0.5",
     "eslint": "^9.9.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
